# mini_compiler

./: CMakeLists.txt  README.md  genTarCode.py  mid3.txt  parsingTreeVis.html
include/: block.h  errorHandler.h  globalVar.h  irCodeGen.h  parserTreeNode.h  saveTree.h
result/: mid.json  mid.txt  mid2.txt  test.asm  test.json
src/: c_lexer.l  errorHandler.cpp  irCodeGen.cpp  main.cpp  parser.y  parserTreeNode.cpp  saveTree.cpp  test.asm
test/: test.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c
